chore: add services section with cards

--- a/index.html
+++ b/index.html
@@ -24,6 +24,28 @@
                         <button>Contact Me</button>
                 </div>
             </div>
+            <section>
+                <h2>Services</h2>
+                <div class="container">
+                <div class="card-container">
+                    <div class="card">
+                        <img src="/assets//images/decor1.png" width="100%" alt="...image of living room">
+                        <h3><b>Interior Designs</b></h3>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                    </div>
+                    <div class="card">
+                        <img src="/assets/images/decor2.png" alt="...image of living room">
+                        <h3><b>Consultation</b></h3>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                    </div>
+                    <div class="card">
+                        <img src="/assets/images/decor3.png" alt="...image of living room">
+                        <h3><b>Accessori</b></h3>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                    </div>
+                </div>
+                </div>
+            </section>
         </main>
 </body>
 </html>
